# tether_control

./: .clang-format  .gitignore  README.md  script.py
src/tether_control/: CMakeLists.txt  Dockerfile  package.xml
src/tether_control/config/: gazebo_bridge.yaml  gz_ros_bridge.yaml  tether_config.yaml  tether_model.yaml
src/tether_control/gz_plugin/: force_plugin.cpp
src/tether_control/gz_plugin/include/force_plugin/: force_plugin.hpp
src/tether_control/include/tether_control/: apply_force_plugin.hpp  control.h  model.h  offboard_control.hpp  tether_control.hpp  tether_model.h
src/tether_control/include/tether_model/: tether_model.hpp
src/tether_control/launch/: attach.launch.py  px4_ros2.launch.py
src/tether_control/log/: latest_build
src/tether_control/models/rs_robot/: rs_robot.sdf
src/tether_control/models/rs_robot/config/: controllers.yaml
src/tether_control/models/rs_robot/meshes/STL/base/: base_link.stl  base_link_old.stl
src/tether_control/models/rs_robot/meshes/STL/lidar_base/: YDlidar_base.stl
src/tether_control/models/rs_robot/meshes/STL/lidar_head/: YDlidar_head v4.stl
src/tether_control/models/rs_robot/meshes/STL/suspension/: FRONT_LEFT_LINKSTL.stl  FRONT_RIGHT_LINKSTL.stl  REAR_LEFT_LINKSTL.stl  REAR_RIGHT_LINKSTL.stl  sus_link.stl
src/tether_control/models/rs_robot/meshes/STL/wheel/: robot_wheel.stl
src/tether_control/models/sjtu_drone/: model.config  sjtu_drone.sdf
src/tether_control/models/tether/: tether.sdf  tether.sdf.jinja  tether_lineal.sdf  tether_lineal.sdf.jinja
src/tether_control/models/tether_v1/: tether.sdf  tether.sdf.jinja
src/tether_control/models/winch/: winch.sdf
src/tether_control/models/x500/: model.sdf
src/tether_control/models/x500_base/: model.sdf
src/tether_control/scripts/: attach_tether.py  generate_csv.py  plot.py
src/tether_control/src/: apply_force_plugin.cpp  generate_csv.py  main.cpp  model.cpp  offboard_control.cpp  tether_control.cpp  tether_model.cpp  utils.cpp
src/tether_control/src/TetherControl/: callbacks.cpp  flight_control.cpp  px4_publishers.cpp  tether_control.cpp  tether_model.cpp  transforms.cpp  utils.cpp  visualization.cpp
src/tether_control/worlds/: stage1.world
